@@ -4,6 +4,7 @@
 
 == rufus-jig - 0.1.3    not yet released
 
+- Patron session go stale. Now refreshing them at each request.
 - CouchDatabase#put_doc : 1 or 2 params
 
 
